tests/transpiler/x/cs/closure.error
dotnet run: exit status 1
/tmp/TestCSTranspiler_VMValid_Golden3245023897/009/Program.cs(5,12): error CS0825: The contextual keyword 'var' may only appear within a local variable declaration or in script code [/tmp/TestCSTranspiler_VMValid_Golden3245023897/009/app.csproj]

The build failed. Fix the build errors and run again.
