tests/transpiler/x/cs/closure.cs
// Generated by Mochi 0.10.33 on 2025-07-21 18:06 +0700
using System;

class Program {
    static var add10 = makeAdder(10);
    static Func<int, int> makeAdder(int n) {
    return (int x) => (x + n);
}

    static void Main() {
        Console.WriteLine(add10(7));
    }
}
